# nixos-config

./: .gitignore  Justfile  README.md  flake.nix
.github/workflows/: ci.yml  system-build.yml
docs/: desktop.md  dev-templates.md  dev-workflows.md  system.md
home/admin/: home.nix
home/admin/desktop/: niri.nix  noctalia.nix
home/admin/programs/: fish.nix  ghostty.nix  git.nix  kitty.nix  neovim.nix  packages.nix
hosts/nixos/: configuration.nix  default.nix  disks.nix  hardware-configuration.nix  hardware.nix
lib/: mkHost.nix
modules/core/: boot.nix  fonts.nix  hardware.nix  nix.nix  packages.nix  users.nix
modules/desktop/: niri.nix  noctalia.nix  sddm.nix  wayland.nix
modules/dev/: web.nix
modules/flake/: checks.nix  dev-shells.nix  formatter.nix  templates.nix
modules/hosts/: nixos.nix
modules/security/: keyring.nix
secrets/: README.md
templates/bun/: Justfile  README.md  flake.nix  package.json  tsconfig.json
templates/fullstack/: .env.example  Justfile  README.md  docker-compose.yml  flake.nix  package.json
templates/local-services/: .env.example  Justfile  README.md  docker-compose.yml
templates/nextjs/: Justfile  README.md  flake.nix
templates/node/: Justfile  README.md  flake.nix  package.json  tsconfig.json
templates/python/: Justfile  README.md  flake.nix  pyproject.toml
templates/python/src/python_project/: __init__.py
templates/python/tests/: test_greet.py
templates/rust/: Justfile  README.md  flake.nix
templates/tanstack-start/: Justfile  README.md  flake.nix
users/admin/: home.nix
users/v/: home.nix
(+138 files in other folders)
